--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT=5100
 NODE_ENV='development'
- MONGO_URL=mongodb+srv://s17001652:kusal1994@cluster0.vcm9oaw.mongodb.net/ecommerce-admin?retryWrites=true&w=majority&appName=Cluster0
-  JWT_SECRET=jwtsecret
+#MONGO_URL=mongodb+srv://s17001652:kusal1994@cluster0.vcm9oaw.mongodb.net/ecommerce-admin?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://e1641113:F538JuzXydErHeAV@cluster0.zrmst.mongodb.net/mydb?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=jwtsecret
 JWT_EXPIRES_IN=1d
 CLOUD_NAME=dxfckak0j
 CLOUD_API_KEY=692621556638178
