--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
- "scripts": {
+  "scripts": {
     "setup-project": "npm i && cd client && npm i",
-   "setup-production-app": "npm i && cd client && npm i && npm run build",
+    "setup-production-app": "npm i && cd client && npm i && npm run build",
     "server": "nodemon server",
     "client": "cd client && npm run dev",
     "dev": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\""
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
     "concurrently": "^8.0.1",
@@ -36,5 +37,8 @@
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "stripe": "^15.8.0"
+  },
+  "devDependencies": {
+    "vite": "^6.1.0"
   }
 }
